# pdf-chat

./: .env.example  .gitignore  Dockerfile  MANUAL.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  clarification_agent.py  orchestrator.py  pdf_agent.py  rag_agent.py  router_agent.py  web_agent.py
app/api/: __init__.py  chat.py  documents.py  health.py  routes.py  sessions.py
app/core/: __init__.py  config.py  dependencies.py
app/db/: __init__.py  memory.py  session_memory.py  vector_store.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  pdf_ingestion.py  web_search.py
scripts/: ingest_pdfs.py
tests/: __init__.py  conftest.py  test_api.py  test_scenarios.py
